## [3.0-RC6] 2016-03-03 Yuri Katkov / Samuel Kerrien /  Lomig Mégard / Mohameth François Sy
### Updated fields
* Registration.data_providers became Registration.agents object with 'id' and 'roles' fields.
* The rational of this change is to separate agents with experimental roles (involved in activities) from those involved as principal investigator or data provider.
* Added the field activities.protocol.id field
* Made specimen.age, specimen.name, specimen.sex and resources.mime-type fields optional

## [3.0-RC5] 2016-03-01 Yuri Katkov / Samuel Kerrien /  Lomig Mégard / Catherine Zwahlen
### Updated fields
* Protocol_description became protocol with description, title  and list of publications. The reason to bring in the title is that we want laboratories to reuse their existing protocols. The reason for the list of publications is to know, where does the original description of the protocol is stored
### Added fields
* attribute fields has been added for datasets and resourses. The rationale behind adding it to resourses is to store the storage-specific attributes like zenodo_id, swift_link, etc. The dataset attributes are datatype-specific parameters, like resolutions of the images.

## [3.0-RC4] 2016-02-01 Samuel Kerrien

### Updated fields
* Gave resource's size the maximum value of Long.MAX_VALUE (i.e. 9,223,372,036,854,775,807)
* Added mininum and maximum attributes on resource's size to make it an unsigned long.
* Made all uuid fields into type 'string' and added pattern to validate UUID format (lowercase only).
* Add /agents.contributors.family_name
* Add /agents.contributors.given_names
* Add ‘private' to registration.release enum
* Rename dataset.comment to dataset.description
* Add an organisation_ref to /agents.contributors
  A user that has multiple organisations should be modelled as separate contributors so that roles can be attributed to a specific organisation.
  The organisation MUST be in the same file.

### Usage note